bugs: cart, payment, spacing

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -250,7 +250,7 @@ body{
 	transition: all 250ms linear;
 }
 
-#logoutButton {
+/* #logoutButton {
   background: none!important;
   border: none;
   font-family: 'Montserrat', sans-serif;
@@ -264,12 +264,12 @@ body{
     transition: all 250ms linear;
     text-decoration: none;
     box-sizing: border-box;
-    text-decoration: none;
+    text-decoration: none; */
 
     /*color: #ffeba7;*/
     
 
-}
+
 /* =================== end of navbar ====================*/
 
 /* ========= Header is hardcoded into src/index.js page =============*/
@@ -358,6 +358,10 @@ body{
 }
 .cartpage input::placeholder {
   text-align: center;
+}
+.cartpage a {
+  text-decoration: none;
+  color: white;
 }
 .border{
   padding: 80px
@@ -843,3 +847,24 @@ hr {
   opacity: 1;
 }
 /* =================== end of footer ====================*/
+.spacer {
+  margin-top: 200px;
+}
+.App {
+   border: solid silver 1px;
+   padding: 20px;
+   border-radius: 10px;
+ }
+ .inputMOTM3{
+  width: 90%;
+  height: 50px;
+  border: 1px solid;
+  background: #2691d9;
+  border-radius: 25px;
+  font-size: 18px;
+  color: white;
+  font-weight: 700;
+  outline: none;
+  cursor: pointer;
+  margin-top: 10px;
+ }
